# SentimentAnalysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: index.html
files/: input.txt
results/: test_neg.txt  test_pos.txt  train_neg.txt  train_pos.txt  train_unsup_results.txt
src/: CMakeLists.txt
src/classifier/: ReviewClassifier.ipynb  hypothesis_1.ipynb  hypothesis_2.ipynb  review_classification.ipynb  vectorizer.py
src/hadoop/: run_hadoop.sh
src/mapper/: CMakeLists.txt  mapper.cpp
src/preprocessing/: CMakeLists.txt  preprocess_file.cpp  preprocessing.h  preprocessing_test.cpp
src/reducer/: CMakeLists.txt  reducer.cpp  reducer.py
src/remove_stop_word/: CMakeLists.txt  remove_stop_word_test.cpp
